--- a/assets/index.html
+++ b/assets/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <head>
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <link href="css/bootstrap.min.css" rel="stylesheet" />
-  <link href="css/bootstrap-theme.css" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
   <div id="root"></div>
