--- a/assets/index.html
+++ b/assets/index.html
@@ -2,10 +2,10 @@
 <head lang="en">
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <link href="css/bootstrap.min.css" rel="stylesheet" />
+  <link href="/css/bootstrap.min.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
   <div id="root"></div>
-  <script src="js/bundle.js"></script>
+  <script src="/js/bundle.js"></script>
 </body>
