--- a/assets/index.html
+++ b/assets/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head lang="en">
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link href="/css/bootstrap.min.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
