--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,8 @@
 
   <link href="/css/bootstrap.min.css" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+  <title>Get PUMP3D</title>
 </head>
 <body>
   <div id="root"></div>
