--- a/assets/index.html
+++ b/assets/index.html
@@ -22,7 +22,37 @@ var _rollbarConfig = {
 
 </head>
 <body>
-  <noscript>Please enable JavaScript!</noscript>
-  <div id="root"></div>
+  <div id="root">
+    <noscript>Please enable JavaScript!</noscript>
+    <div class="container">
+      <div class="row">
+        <div class="jumbotron">
+          <h1 class="header">Get Pumped and Make Gains</h1>
+          <div class="row">
+            <div class="col-md-8">
+              <p>Record, Recall, Report</p>
+              <p>
+                There's nothing more annoying than trying to remember your last session in
+                the gym when all you want to do is get a sick pump.
+              </p>
+              <p>Start your session</p>
+              <p>Look up your workout</p>
+              <p>Re-run your last set</p>
+              <p>
+                <a href="login" class="btn btn-primary btn-lg login-button">
+                  Get Started
+                </a>
+              </p>
+            </div>
+            <div class="col-md-4">
+              <img src="/img/last-workout.png" style="width: 100%">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <script src="/js/bundle.js"></script>
 </body>
