Forcibly overwrite the root

--- a/assets/index.html
+++ b/assets/index.html
@@ -24,7 +24,7 @@ var _rollbarConfig = {
 <body>
   <div id="root">
     <noscript>Please enable JavaScript!</noscript>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="jumbotron">
           <h1 class="header">Get Pumped and Make Gains</h1>
