Send a summary out for our workout #94

--- a/assets/index.html
+++ b/assets/index.html
@@ -3,6 +3,8 @@
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="shortcut icon" href="/img/favicon.ico">
   <link href="/css/bootstrap.min.css" rel="stylesheet">
+
+  <meta name="google-site-verification" content="i9JuHb6K-qZQ3aTP7bl5-GwVlQRWOUKYHvfcDRgM6I0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
   <title>Get PUMP3D</title>
