Played around with using column
Using columns to build up the grid instead to get a feel for if it’s
more workable

--- a/assets/index.html
+++ b/assets/index.html
@@ -10,6 +10,13 @@
 
   <title>Get PUMP3D</title>
 
+  <style>
+  @media screen and (min-width: 1200px) {
+    .bricklayer-column-sizer {
+      width: 33.3%;
+    }
+  }
+  </style>
 </head>
 <body>
   <div id="root">
